--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -22,6 +22,7 @@ body {
             font-family: 'Nyala', serif;
             font-weight: bold;
             text-align: center;
+            text-transform: uppercase;
             padding: 0;
             li {
                 display: inline-block;
