--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -54,7 +54,7 @@ body {
             &.post-result-failed .post-header {
                 text-decoration: line-through;
             }
-            .enemy-image {
+            .enemy-image, .post-image {
                 float: right;
                 max-width: 150px;
             }
